force-app/main/default/objects/Lead/fields/Alternative_POS__c.field-meta.xml
<CustomField>
    <fullName>Alternative_POS__c</fullName>
    <label>Alternative POS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO OTHER POS</fullName>
            </value>
            <value>
                <fullName>9 Cookies</fullName>
            </value>
            <value>
                <fullName>AddiPos</fullName>
            </value>
            <value>
                <fullName>AIDA/Linecker</fullName>
            </value>
            <value>
                <fullName>Alfo PC-POS</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Android POS</fullName>
            </value>
            <value>
                <fullName>Ankerdata PC-POS</fullName>
            </value>
            <value>
                <fullName>Apple computers</fullName>
            </value>
            <value>
                <fullName>APRO</fullName>
            </value>
            <value>
                <fullName>Bistro-Cash</fullName>
            </value>
            <value>
                <fullName>Bleep</fullName>
            </value>
            <value>
                <fullName>Bogan</fullName>
            </value>
            <value>
                <fullName>Bonissimo</fullName>
            </value>
            <value>
                <fullName>bonit.at</fullName>
            </value>
            <value>
                <fullName>Breadcrumb</fullName>
            </value>
            <value>
                <fullName>CashIT</fullName>
            </value>
            <value>
                <fullName>CashPad</fullName>
            </value>
            <value>
                <fullName>cash register</fullName>
            </value>
            <value>
                <fullName>Cash Till Old</fullName>
            </value>
            <value>
                <fullName>Casio</fullName>
            </value>
            <value>
                <fullName>casio Android</fullName>
            </value>
            <value>
                <fullName>Casio Touchscreen</fullName>
            </value>
            <value>
                <fullName>Centegra</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Clover</fullName>
            </value>
            <value>
                <fullName>Cobra POS / PC Cash</fullName>
            </value>
            <value>
                <fullName>Dongle system</fullName>
            </value>
            <value>
                <fullName>DuG POS</fullName>
            </value>
            <value>
                <fullName>Easy Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>