force-app/main/default/objects/Lead/fields/Ambassador_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_First_Name__c</fullName>
    <description>CDS-2084 // CDS-1968</description>
    <label>Ambassador First Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>