force-app/main/default/objects/Lead/fields/Ambassador_ID__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_ID__c</fullName>
    <description>CDS-2084 // CDS-1968</description>
    <label>Ambassador ID</label>
    <type>Email</type>
</CustomField>