force-app/main/default/objects/Lead/fields/Ambassador_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Phone__c</fullName>
    <description>CDS-2084 // CDS-1968</description>
    <label>Ambassador Phone</label>
    <type>Phone</type>
</CustomField>