force-app/main/default/objects/Lead/fields/Attention_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Attention_Trigger__c</fullName>
    <description>Stakeholder: Sales / BI https://jira.orderbird.com/browse/CDS-440</description>
    <inlineHelpText>What triggered the prospect&apos;s attention for orderbird? Answer to the question &quot;how did you first got to know about orderbird?&quot; Filled by Sales</inlineHelpText>
    <label>Attention Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Customer Network / Recommendation</fullName>
            </value>
            <value>
                <fullName>Customer recruits Customer</fullName>
            </value>
            <value>
                <fullName>DGGP</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google Research</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>knows us from previous occupation</fullName>
            </value>
            <value>
                <fullName>Mentioning by competitor</fullName>
            </value>
            <value>
                <fullName>orderbird mailing</fullName>
            </value>
            <value>
                <fullName>Recommendation by Tax Advisor</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Trade fair</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>WOM / Discovered in action</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>