force-app/main/default/objects/Lead/fields/AutoConvert__c.field-meta.xml
<CustomField>
    <fullName>AutoConvert__c</fullName>
    <description>Part of an auto lead conversion process: https://jira.orderbird.com/browse/CRM-866 
Will not be used for Go-Live due to the new Regional Sales structure</description>
    <label>AutoConvert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WITH</fullName>
            </value>
            <value>
                <fullName>WITHOUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>