force-app/main/default/objects/Lead/fields/Best_time_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_contact__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1224</description>
    <label>Best time to contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Noon</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>