force-app/main/default/objects/Lead/fields/BusinessConceptGGP__c.field-meta.xml
<CustomField>
    <fullName>BusinessConceptGGP__c</fullName>
    <description>Stakeholder: MKT (Gründerpreis)</description>
    <inlineHelpText>Part of the Gastro Founder Award: What is the idea for their business they apply with? Filled in by applicant through online form</inlineHelpText>
    <label>Business Concept (GGP)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>