force-app/main/default/objects/Lead/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>For campaign id&apos;s from web2lead</description>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>