force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>CASE(
Lead_Channel__c, 
&quot;As Medium&quot;, &quot;todo&quot;, 
&quot;Unknown&quot;, &quot;todo2&quot;,
Lead_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>