force-app/main/default/objects/Lead/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>In case the lead came through our online marketing: what is the lead&apos;s client ID? Set automatically on creation if available</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>