force-app/main/default/objects/Lead/fields/Closed_Contract_Days__c.field-meta.xml
<CustomField>
    <fullName>Closed_Contract_Days__c</fullName>
    <label>Closed Contract Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>