force-app/main/default/objects/Lead/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Stakeholder: LM &amp; Sales</description>
    <inlineHelpText>Specifically related to Sales activities. Information moves over to the opportunity after lead conversion.</inlineHelpText>
    <label>Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>