force-app/main/default/objects/Lead/fields/CommissionClaim__c.field-meta.xml
<CustomField>
    <fullName>CommissionClaim__c</fullName>
    <description>Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>Has the contact who referred the lead to us a valid claim for a commission? Reasons to set &quot;no&quot;: We are already in contact with the referred venue (open opportunity), or the Partner didn&apos;t prepare them for our call</inlineHelpText>
    <label>Commission Claim</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>