force-app/main/default/objects/Lead/fields/ContactReason__c.field-meta.xml
<CustomField>
    <fullName>ContactReason__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Are any particular reasons known why the prospect contacted us? To be filled in by Leadmananagement or SDR if possible</inlineHelpText>
    <label>Contact Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2nd Venue</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Immediate Need</fullName>
            </value>
            <value>
                <fullName>Wants to Switch</fullName>
            </value>
            <value>
                <fullName>New opening</fullName>
            </value>
            <value>
                <fullName>Law conform POS</fullName>
            </value>
            <value>
                <fullName>Info request for 3rd party</fullName>
            </value>
            <value>
                <fullName>General information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>