force-app/main/default/objects/Lead/fields/DateOfHandover__c.field-meta.xml
<CustomField>
    <fullName>DateOfHandover__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Stakeholder: PaM &amp; Sales (CRC)</description>
    <inlineHelpText>When has a partner or existing customer send us this lead? To be filled in immediately upon lead arrival</inlineHelpText>
    <label>Date of Handover</label>
    <type>Date</type>
</CustomField>