force-app/main/default/objects/Lead/fields/DecisionMaker__c.field-meta.xml
<CustomField>
    <fullName>DecisionMaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/SAL-1113</description>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>