force-app/main/default/objects/Lead/fields/Device_SIM_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Device_SIM_Card_Number__c</fullName>
    <description>Stakeholder MINI https://jira.orderbird.com/browse/CRMT-3771</description>
    <inlineHelpText>What is the number of the SIM Card in the MINI device?</inlineHelpText>
    <label>Device SIM Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>