force-app/main/default/objects/Lead/fields/DistributionID__c.field-meta.xml
<CustomField>
    <fullName>DistributionID__c</fullName>
    <label>DistributionID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>