force-app/main/default/objects/Lead/fields/DUPCHECK_Email__c.field-meta.xml
<CustomField>
    <fullName>DUPCHECK_Email__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-974</description>
    <label>DUPCHECK Email</label>
    <type>Email</type>
</CustomField>