force-app/main/default/objects/Lead/fields/DUPCHECK_Phone__c.field-meta.xml
<CustomField>
    <fullName>DUPCHECK_Phone__c</fullName>
    <description>DUPCHECK</description>
    <label>DUPCHECK Phone</label>
    <type>Phone</type>
</CustomField>