force-app/main/default/objects/Lead/fields/DUPCHECK_Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>DUPCHECK_Venue_Name__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-974</description>
    <label>DUPCHECK Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>