force-app/main/default/objects/Lead/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1372</description>
    <label># Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-4</fullName>
            </value>
            <value>
                <fullName>5-7</fullName>
            </value>
            <value>
                <fullName>8-12</fullName>
            </value>
            <value>
                <fullName>13-18</fullName>
            </value>
            <value>
                <fullName>19+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>