force-app/main/default/objects/Lead/fields/Facebook_CA_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Facebook_CA_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: MKT
https://jira.orderbird.com/browse/CDS-961</description>
    <inlineHelpText>Has this Lead consented that we upload their data to Facebook for Custom Audiences?</inlineHelpText>
    <label>Facebook CA opt-in</label>
    <type>Checkbox</type>
</CustomField>