force-app/main/default/objects/Lead/fields/Facebook_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Link__c</fullName>
    <description>Stakeholder: Sales</description>
    <inlineHelpText>Has the venue as facebook page? To be filled in once known</inlineHelpText>
    <label>Facebook Link</label>
    <type>Url</type>
</CustomField>