force-app/main/default/objects/Lead/fields/FinanceContact__c.field-meta.xml
<CustomField>
    <fullName>FinanceContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/SAL-1113</description>
    <label>Finance Contact</label>
    <type>Checkbox</type>
</CustomField>