force-app/main/default/objects/Lead/fields/First_Successful_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Successful_Activity_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/SAL-1226</description>
    <label>First Successful Activity Date</label>
    <type>DateTime</type>
</CustomField>