force-app/main/default/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Stakeholder: MKT</description>
    <inlineHelpText>Does the lead have a google advert ID? Automatically filled on creation</inlineHelpText>
    <label>gclID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>