force-app/main/default/objects/Lead/fields/Has_Complete_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Has_Complete_Contact_Info__c</fullName>
    <description>Formula to check if all contact information are filled in</description>
    <formula>AND( 
FirstName != &apos;&apos;,
Street != &apos;&apos;,
City != &apos;&apos;,
PostalCode != &apos;&apos;,
Country != &apos;&apos;,
Phone != &apos;&apos;,
Email!=&apos;&apos;,
Company!=&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Complete Contact Info</label>
    <type>Checkbox</type>
</CustomField>