force-app/main/default/objects/Lead/fields/Ignore_Email__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-974</description>
    <inlineHelpText>Should Email be ignored when checking for duplicates?</inlineHelpText>
    <label>Ignore Email?</label>
    <type>Checkbox</type>
</CustomField>