force-app/main/default/objects/Lead/fields/Ignore_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Full_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-974</description>
    <inlineHelpText>Should Full Name be ignored when checking for duplicates?</inlineHelpText>
    <label>Ignore Full Name?</label>
    <type>Checkbox</type>
</CustomField>