force-app/main/default/objects/Lead/fields/Ignore_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-974</description>
    <inlineHelpText>Should Phone be ignored when searching for duplicates?</inlineHelpText>
    <label>Ignore Phone?</label>
    <type>Checkbox</type>
</CustomField>