force-app/main/default/objects/Lead/fields/LAC_ID__c.field-meta.xml
<CustomField>
    <fullName>LAC_ID__c</fullName>
    <description>Stakeholder: CDS, BI, MKT, Sales https://jira.orderbird.com/browse/CDS-138</description>
    <inlineHelpText>Enter the ID (3 digits) for relevant Lead Attribution Combo. Careful: entering wrong numbers is possible!</inlineHelpText>
    <label>LAC ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>